# law-retrieval-rag

./: .env.example  .gitignore  Makefile  README.md  main.py  main2.py  pyproject.toml  requirements.txt  streamlit_app.py  test.py
evaluation/: retrieval_eval.py  test_queries.py
src/: chunker.py  cross_encoder.py  hybrid_retriever.py  parser.py  retriever.py  semantic_retriever.py
src/graph/: QueryEmbedder.py  embed_existing.py  graph_builder.py  graph_embeddings.py  graph_retriever.py  graph_schema.py  graph_vector_store.py  query_embedder.py
src/utils/: document_schema.py
tests/: __init__.py  test_parser.py
