[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-rag-graph"
version = "0.1.0"
description = "Hybrid Ensemble Retrieval & Knowledge Graph for Legal Contracts"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'